LH | fix: Правка правил

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -270,7 +270,7 @@
                                 </p>
                                 <p class="text-xl pl-20">• Обустроенный центр селения (деревенская площадь).</p>
                                 <p class="text-xl pl-20">• Колодец с питьевой водой.</p>
-                                <p class="text-xl pl-20">• Наличие не менее 4-х отдельных строений.</p>
+                                <p class="text-xl pl-20">• Наличие не менее 4-х отдельных одноэтажных строений.</p>
                                 <p class="text-xl pl-20">
                                     • Наличие либо минимальных грядок (3х3 блоков), либо загона с животными не менее 4-х
                                     голов.
@@ -335,12 +335,12 @@
                                 <p class="text-xl pl-20">• Обустроенный центр поселка (сельская площадь).</p>
                                 <p class="text-xl pl-20">• Колодец с питьевой водой.</p>
                                 <p class="text-xl pl-20">
-                                    • Наличие не менее 4-х отдельных строений и не менее 1-го двухэтажного отдельного
-                                    строения.
+                                    • Наличие не менее 4-х отдельных одноэтажных строений и не менее 1-го отдельного
+                                    двухэтажного строения.
                                 </p>
                                 <p class="text-xl pl-20">
-                                    • Наличие религиозного здания или научного здания или экономического здания или
-                                    здания культурной направленности.
+                                    • Наличие религиозного или научного или экономического здания или здания культурной
+                                    направленности.
                                 </p>
                                 <p class="text-xl pl-20">
                                     • Тропы между всеми постройками из блоков дороги (каменная, либо деревянная, либо с
@@ -420,12 +420,12 @@
                                 <p class="text-xl pl-20">• Обустроенный центр города (городская площадь).</p>
                                 <p class="text-xl pl-20">• Колодец с питьевой водой.</p>
                                 <p class="text-xl pl-20">
-                                    • Наличие не менее 2-х отдельных одноэтажных построек и не менее 4-х двухэтажных
-                                    отдельных построек.
+                                    • Наличие не менее 2-х отдельных одноэтажных строений и не менее 4-х отдельных
+                                    двухэтажных строений.
                                 </p>
                                 <p class="text-xl pl-20">
-                                    • Наличие религиозного здания или научного здания или экономического здания или
-                                    здания культурной направленности.
+                                    • Наличие религиозного или научного или экономического здания или здания культурной
+                                    направленности.
                                 </p>
                                 <p class="text-xl pl-20">
                                     • Минимум 1 поле культур площадью не менее 80 блоков (форма может быть
@@ -530,12 +530,12 @@
                                 </p>
                                 <p class="text-xl pl-20">• Колодец с питьевой водой.</p>
                                 <p class="text-xl pl-20">
-                                    • Наличие не менее 3-х одноэтажных отдельных построек, 4-х двухэтажных и 1-ой
-                                    трехэтажной.
+                                    • Наличие не менее 3-х одноэтажных отдельных строений, 4-х двухэтажных и 1-го
+                                    трехэтажного.
                                 </p>
                                 <p class="text-xl pl-20">
-                                    • Наличие религиозного здания или научного здания или экономического здания или
-                                    здания культурной направленности.
+                                    • Наличие религиозного или научного или экономического здания или здания культурной
+                                    направленности.
                                 </p>
                                 <p class="text-xl pl-20">
                                     • Минимум 1 поле культур площадью не менее 144 блоков (форма может быть
@@ -785,6 +785,9 @@
                             <p class="text-xl pl-20">
                                 • Вору запрещается использовать любой инструмент чизла на чужой территории и в процессе
                                 воровства.
+                            </p>
+                            <p class="text-xl pl-20">
+                                • Вору запрещается носить на спине сундуки, сосуды и дупла.
                             </p>
                             <p class="text-xl pl-20">
                                 • Вор обязан в начале совершения воровства сделать скриншоты: своего инвентаря; брони на
