--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -44,11 +44,11 @@
                     является поражением в войне.
                 </p>
                 <p class="text-xl pl-4">
-                    <span class="font-bold">•</span> Патент на селение определенного типа - книга - документ,
+                    <span class="font-bold">•</span> Патент на селение определенного типа - книга-документ,
                     предоставляемая городом сюзереном, дающая право на основание определенного типа селения.
                 </p>
                 <p class="text-xl pl-4">
-                    <span class="font-bold">•</span> Купчая вольности - книга - документ, предоставляемая городом
+                    <span class="font-bold">•</span> Купчая вольности - книга-документ, предоставляемая городом
                     сюзереном, подтверждающая статус вольного человека и дающая доступ к вступлению в селения
                     определенного типа.
                 </p>
@@ -786,9 +786,7 @@
                                 • Вору запрещается использовать любой инструмент чизла на чужой территории и в процессе
                                 воровства.
                             </p>
-                            <p class="text-xl pl-20">
-                                • Вору запрещается носить на спине сундуки, сосуды и дупла.
-                            </p>
+                            <p class="text-xl pl-20">• Вору запрещается носить на спине сундуки, сосуды и дупла.</p>
                             <p class="text-xl pl-20">
                                 • Вор обязан в начале совершения воровства сделать скриншоты: своего инвентаря; брони на
                                 своем персонаже; списка игроков, которые находятся в онлайне; Приветствуются откаты
