--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -96,6 +96,14 @@
                 <tui-icon icon="@tui.store" />
                 <span class="hidden md:block">МАГАЗИН</span>
             </button>
+            <button
+                [routerLink]="['/faq']"
+                class="nav-button w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'faq' }"
+            >
+                <tui-icon icon="@tui.info" />
+                <span class="hidden md:block">FAQ</span>
+            </button>
         </div>
         <div class="flex flex-row gap-2">
             <button
