--- a/last-hearth-landing/src/app/layout/footer/footer.component.html
+++ b/last-hearth-landing/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex w-full p-6 pb-3 justify-between">
+<div class="flex w-full p-6 pb-20 xl:pb-3 justify-between">
     <div class="flex gap-10 items-center">
         <div class="md:flex font-semibold items-center shrink-0 hidden">
             <img src="/logo.ico" class="size-16" />
