LH | fix: Уточнение размеров

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -410,8 +410,8 @@
                                 <p class="text-xl pl-20">
                                     • Возможность возвести составное оборонительное строение: деревянная башня, либо
                                     форт, возможные как хранилище главных ресурсов и жилье правителя, высотой не более
-                                    двенадцати блоков, площадью не более 11х11 блоков. С предусмотренной возможностью
-                                    для будущего расширения.
+                                    18 блоков, площадью не более 13х13 блоков. С предусмотренной возможностью для
+                                    будущего расширения.
                                 </p>
                                 <p class="text-xl pl-20">• Чертеж для улучшенных парусов.</p>
                                 <p class="text-xl pl-20">
@@ -510,7 +510,7 @@
                                 <p class="text-xl pl-20">
                                     • Возможность возвести составное оборонительное строение: каменная башня, либо форт,
                                     либо донжон, замок и т.п. возможные как хранилище главных ресурсов и жилье
-                                    правителя, высотой не более восемнадцати блоков, площадью не более 21х21 блоков. С
+                                    правителя, высотой не более 24 блоков, площадью не более 23х23 блоков. С
                                     предусмотренной возможностью для будущего расширения.
                                 </p>
                                 <p class="text-xl pl-20">• Возможность получить трех случайных торговцев.</p>
@@ -636,7 +636,7 @@
                                 <p class="text-xl pl-20">
                                     • Возможность возвести составное оборонительное строение: каменная башня, либо форт,
                                     либо донжон, замок и т.п. возможные как хранилище главных ресурсов и жилье
-                                    правителя, высотой не более двадцати семи блоков, площадью не более 60х60 блоков.
+                                    правителя, высотой не более 31 блоков, площадью не более 60х60 блоков.
                                 </p>
                                 <p class="text-xl pl-20">
                                     • Право запроса бесплатной помощи от города сюзерена 1 раз в год на 48 слотов
